<?xml version="1.0"?>
<package format="3">
  <name>tori_bringup</name>
  <version>0.0.0</version>
  <description>Launch package for Tori robot</description>
  <maintainer email="ksukriti08@gmail.com">Suki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Execution dependencies -->
  <exec_depend>odom_tf_convert</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
